--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                 <li><a href="#features">Features</a></li>
                 <li><a href="#personas">Personas</a></li>
                 <li><a href="#quick-start">Quick Start</a></li>
-                <li><a href="#docs">Docs</a></li>
+                <li><a href="https://github.com/IlamSingleBrainCell/ai-agent-orchestrator/blob/main/README.md">Docs</a></li>
             </ul>
             <a href="https://github.com/IlamSingleBrainCell/ai-agent-orchestrator" class="github-btn">
                 <i class="fab fa-github"></i> GitHub
